[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/sprites/card_sprites/img.jpg" type="Texture" id=1]
[ext_resource path="res://src/sprites/card_front.png" type="Texture" id=2]
[ext_resource path="res://src/fonts/no_game_no_life.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/fonts/Blacklisted.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/sprites/card_back.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/CardArea2D.gd" type="Script" id=6]
[ext_resource path="res://src/scripts/Card.gd" type="Script" id=7]

[sub_resource type="Animation" id=7]
resource_name = "enlarge"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "smallen"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 164, 208 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[node name="Card" type="Node2D"]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/enlarge = SubResource( 7 )
anims/smallen = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="CardFront" type="Node2D" parent="."]
visible = false

[node name="Frame" type="Sprite" parent="CardFront"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Image" type="Sprite" parent="CardFront"]
position = Vector2( 0, -118 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="CardFront"]
margin_left = -155.5
margin_top = -32.195
margin_right = 153.5
margin_bottom = -0.195007
custom_fonts/font = SubResource( 3 )
text = "Card Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CardFront"]
margin_left = -138.0
margin_top = 14.0
margin_right = 138.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 4 )
text = "Sample card description"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="CardFront"]
margin_left = -126.0
margin_top = 168.0
margin_right = -97.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MvSpd" type="Label" parent="CardFront"]
margin_left = -51.0
margin_top = 168.0
margin_right = -22.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkSpd" type="Label" parent="CardFront"]
margin_left = 24.0
margin_top = 168.0
margin_right = 53.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="Label" parent="CardFront"]
margin_left = 99.0
margin_top = 168.0
margin_right = 128.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBack" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
